# detex

./: README.md  detex.py  pyproject.toml
detex/: __init__.py  detex.py  main.py
